Migrate code to use newer Java version features #27